--- a/src/app/components/appfooter/appfooter.component.html
+++ b/src/app/components/appfooter/appfooter.component.html
@@ -1,3 +1,7 @@
-<p>
-  appfooter works!
-</p>
+<footer class="main-footer">
+  <div class="pull-right hidden-xs">
+    <b>Version</b> 1.0.0
+  </div>
+  <strong>Copyright &copy; 2019 <a href="codepanda.id">Codepanda.id</a>.</strong> All rights
+  reserved.
+</footer>
