--- a/src/app/components/appheader/appheader.component.html
+++ b/src/app/components/appheader/appheader.component.html
@@ -27,7 +27,7 @@
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-right">
-                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                <a href="#" class="btn btn-default btn-flat" (click)="logout()">Sign out</a>
               </div>
             </li>
           </ul>
