--- a/src/app/components/appsidemenu/appsidemenu.component.html
+++ b/src/app/components/appsidemenu/appsidemenu.component.html
@@ -14,32 +14,37 @@
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">PILIHAN MENU ANDA</li>
-      <li class="active treeview menu-open">
+      <li class="treeview menu-open">
         <a routerLink="/admin/dashboard" routerLinkActive="active">
           <i class="fa fa-dashboard"></i> <span>Dashboard</span>
         </a>
       </li>
       <li>
-        <a href="pages/widgets.html">
-          <i class="fa fa-th"></i> <span>Widgets</span>
-          <span class="pull-right-container">
-            <small class="label pull-right bg-green">new</small>
-          </span>
+        <a routerLink="/admin/news" routerLinkActive="active">
+          <i class="fa fa-th"></i> <span>Berita</span>
         </a>
       </li>
       <li class="treeview">
-        <a href="#">
-          <i class="fa fa-pie-chart"></i>
-          <span>Charts</span>
+        <a>
+          <i class="fa fa-tasks"></i>
+          <span>Penugasan</span>
           <span class="pull-right-container">
             <i class="fa fa-angle-left pull-right"></i>
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-          <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-          <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-          <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+          <li><a routerLink="/admin/task" routerLinkActive="active"><i class="fa fa-plus"></i>Tambah Saga</a></li>
+          <li class="treeview">
+            <a href="#"><i class="fa fa-users"></i> Daftar Saga
+              <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+            </a>
+            <ul class="treeview-menu">
+              <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
+              <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
       
