--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -6,19 +6,19 @@
     <div class="login-box-body">
       <p class="login-box-msg">Silahkan Login untuk masuk.</p>
   
-      <form action="#" method="post">
+      <form [formGroup]="LoginUser" (ngSubmit)="loggingIn()">
         <div class="form-group has-feedback">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="email" formControlName="email" class="form-control" placeholder="Email">
           <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" formControlName="password" class="form-control" placeholder="Password">
           <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="row">
           <!-- /.col -->
           <div class="col-12">
-            <button type="submit" class="btn btn-primary btn-block btn-flat btn-round">Login</button>
+            <button [disabled]="!LoginUser.valid" type="submit" class="btn btn-primary btn-block btn-flat btn-round">Login</button>
           </div>
           <!-- /.col -->
         </div>
