error checking done, its the backend

--- a/src/app/components/appsidemenu/appsidemenu.component.html
+++ b/src/app/components/appsidemenu/appsidemenu.component.html
@@ -58,40 +58,19 @@
           </span>
         </a>
       </li>
-      
-      <li class="treeview">
-        <a href="#">
-          <i class="fa fa-share"></i> <span>Multilevel</span>
-          <span class="pull-right-container">
-            <i class="fa fa-angle-left pull-right"></i>
-          </span>
+
+      <li>
+        <a href="pages/mailbox/mailbox.html">
+          <i class="fa fa-images"></i> <span>Galeri</span>
         </a>
-        <ul class="treeview-menu">
-          <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-          <li class="treeview">
-            <a href="#"><i class="fa fa-circle-o"></i> Level One
-              <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
-            </a>
-            <ul class="treeview-menu">
-              <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-              <li class="treeview">
-                <a href="#"><i class="fa fa-circle-o"></i> Level Two
-                  <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                  </span>
-                </a>
-                <ul class="treeview-menu">
-                  <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                  <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-        </ul>
       </li>
+
+      <li>
+        <a href="pages/mailbox/mailbox.html">
+          <i class="fa fa-store"></i> <span>MPKMB Store</span>
+        </a>
+      </li>
+      
     </ul>
   </section>
   <!-- /.sidebar -->
