adding some component

--- a/src/app/components/appheader/appheader.component.html
+++ b/src/app/components/appheader/appheader.component.html
@@ -18,7 +18,7 @@
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
         <!-- User Account: style can be found in dropdown.less -->
-        <li class="dropdown user user-menu">
+        <li class="btn btn-primary dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <img src="../../../assets/img/avatar.png" class="user-image" alt="User Image">
             <span class="hidden-xs">Admin</span>
@@ -27,7 +27,7 @@
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-right">
-                <a href="#" class="btn btn-default btn-flat" (click)="logout()">Sign out</a>
+                <a href="#" class="btn btn-default" (click)="logout()">Sign out</a>
               </div>
             </li>
           </ul>
