--- a/src/app/components/appsidemenu/appsidemenu.component.html
+++ b/src/app/components/appsidemenu/appsidemenu.component.html
@@ -33,9 +33,9 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a routerLink="/admin/task" routerLinkActive="active"><i class="fa fa-plus"></i>Tambah Saga</a></li>
+          <li><a routerLink="/admin/task" routerLinkActive="active"><i class="fa fa-plus"></i>Tambah Kelompok</a></li>
           <li class="treeview">
-            <a href="#"><i class="fa fa-users"></i> Daftar Saga
+            <a href="#"><i class="fa fa-users"></i> Daftar Kelompok
               <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
@@ -47,27 +47,16 @@
           </li>
         </ul>
       </li>
-      
+
       <li>
         <a href="pages/mailbox/mailbox.html">
-          <i class="fa fa-envelope"></i> <span>Mailbox</span>
-          <span class="pull-right-container">
-            <small class="label pull-right bg-yellow">12</small>
-            <small class="label pull-right bg-green">16</small>
-            <small class="label pull-right bg-red">5</small>
-          </span>
+          <i class="fa fa-picture-o"></i> <span>Galeri</span>
         </a>
       </li>
 
       <li>
         <a href="pages/mailbox/mailbox.html">
-          <i class="fa fa-images"></i> <span>Galeri</span>
-        </a>
-      </li>
-
-      <li>
-        <a href="pages/mailbox/mailbox.html">
-          <i class="fa fa-store"></i> <span>MPKMB Store</span>
+          <i class="fa fa-shopping-cart"></i> <span>MPKMB Store</span>
         </a>
       </li>
       
