renewed some route

--- a/src/app/components/appsidemenu/appsidemenu.component.html
+++ b/src/app/components/appsidemenu/appsidemenu.component.html
@@ -20,7 +20,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/admin/news" routerLinkActive="active">
+        <a routerLink="/admin/berita" routerLinkActive="active">
           <i class="fa fa-th"></i> <span>Berita</span>
         </a>
       </li>
@@ -33,7 +33,7 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a routerLink="/admin/task" routerLinkActive="active"><i class="fa fa-plus"></i>Tambah Kelompok</a></li>
+          <li><a routerLink="/admin/penugasan" routerLinkActive="active"><i class="fa fa-plus"></i>Tambah Kelompok</a></li>
           <li class="treeview">
             <a href="#"><i class="fa fa-users"></i> Daftar Kelompok
               <span class="pull-right-container">
@@ -49,13 +49,13 @@
       </li>
 
       <li>
-        <a href="pages/mailbox/mailbox.html">
+        <a routerLink="/admin/galeri" routerLinkActive="active">
           <i class="fa fa-picture-o"></i> <span>Galeri</span>
         </a>
       </li>
 
       <li>
-        <a href="pages/mailbox/mailbox.html">
+        <a routerLink="/admin/toko" routerLinkActive="active">
           <i class="fa fa-shopping-cart"></i> <span>MPKMB Store</span>
         </a>
       </li>
