add news service, trying to upload a news (not yet finished)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import url(~jvectormap/jquery-jvectormap.css);
 @import url(~admin-lte/dist/css/AdminLTE.min.css);
 @import url(~admin-lte/dist/css/skins/_all-skins.min.css);
+@import url(~admin-lte/bower_components/select2/dist/css/select2.min.css);
 // @import "assets/plugins/iCheck/square/blue.css";
 
 .navbar {
