--- a/src/app/components/appheader/appheader.component.html
+++ b/src/app/components/appheader/appheader.component.html
@@ -18,7 +18,7 @@
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
         <!-- User Account: style can be found in dropdown.less -->
-        <li class="btn btn-primary dropdown user user-menu">
+        <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <img src="../../../assets/img/avatar.png" class="user-image" alt="User Image">
             <span class="hidden-xs">Admin</span>
