--- a/src/app/pages/admin-page/news/news.component.html
+++ b/src/app/pages/admin-page/news/news.component.html
@@ -7,7 +7,7 @@
       <a href="#">
         <i class="fa fa-dashboard"></i> Home</a>
     </li>
-    <li class="active">News</li>
+    <li class="active">Berita</li>
   </ol>
 </section>
 
@@ -16,13 +16,12 @@
 
   <div class="box">
     <div class="box-header">
-      <h3 class="box-title">Responsive Hover Table</h3>
 
       <div class="box-tools">
         <div class="input-group input-group-sm" style="width: 150px;">
 
           <div class="input-group-btn">
-            <button type="submit" class="btn btn-success">
+            <button type="submit" class="btn btn-success" routerLink="/admin/tambah-berita" routerLinkActive="active">
               <i class="fa fa-plus"></i>
               Tambah Berita
             </button>
