--- a/src/app/pages/admin-page/news/news.component.html
+++ b/src/app/pages/admin-page/news/news.component.html
@@ -16,16 +16,12 @@
 
   <div class="box">
     <div class="box-header">
-
-      <div class="box-tools">
-        <div class="input-group input-group-sm" style="width: 150px;">
-
-          <div class="input-group-btn">
-            <button type="submit" class="btn btn-success" routerLink="/admin/tambah-berita" routerLinkActive="active">
-              <i class="fa fa-plus"></i>
-              Tambah Berita
-            </button>
-          </div>
+      <div class="input-group input-group-sm pull-right" style="width: 150px;">
+        <div class="input-group-btn">
+          <button type="submit" class="btn btn-success" routerLink="/admin/tambah-berita" routerLinkActive="active">
+            <i class="fa fa-plus"></i>
+            Tambah Berita
+          </button>
         </div>
       </div>
     </div>
