--- a/src/app/pages/admin-page/news/news.component.html
+++ b/src/app/pages/admin-page/news/news.component.html
@@ -16,6 +16,7 @@
 
   <div class="box">
     <div class="box-header">
+      <h5 *ngIf="newsList" class="box-title">Ada {{newsList.length}} berita saat ini.</h5>
       <div class="input-group input-group-sm pull-right" style="width: 150px;">
         <div class="input-group-btn">
           <button type="submit" class="btn btn-success" routerLink="/admin/tambah-berita" routerLinkActive="active">
@@ -31,36 +32,24 @@
         <thead>
           <tr>
             <th>No</th>
-            <th>Tanggal</th>
-            <th>Judul</th>
-            <th></th>
+            <th>Judul Berita</th>
+            <th>Ringkasan Berita</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
-            <td>John Doe</td>
-            <td>11-7-2014</td>
-            <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
+          <tr *ngFor="let news of newsList; let i = index" [routerLink]="['/admin/berita-detail', news._id]">
+            <td>{{i+1}}</td>
+            <td>{{news.title}}</td>
+            <td>{{news.summary}}</td>
+            <td>
+              <a class="btn btn-danger">
+                <i class="fa fa-trash"></i>
+              </a>
+            </td>
           </tr>
-          <tr>
-            <td>2</td>
-            <td>Alexander Pierce</td>
-            <td>11-7-2014</td>
-            <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Bob Doe</td>
-            <td>11-7-2014</td>
-            <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Mike Doe</td>
-            <td>11-7-2014</td>
-            <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
+          <tr *ngIf="!newsList">
+            <td>Tidak ada berita yang ditampilkan saat ini.</td>
           </tr>
         </tbody>
       </table>
