--- a/src/app/pages/admin-page/news/news.component.scss
+++ b/src/app/pages/admin-page/news/news.component.scss
@@ -3,6 +3,10 @@ table {
         tr {
             cursor: pointer;
         }
+
+        td {
+            vertical-align: middle;
+        }
     }
 
     a {
