--- a/src/app/pages/admin-page/news/news.component.html
+++ b/src/app/pages/admin-page/news/news.component.html
@@ -38,12 +38,12 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let news of newsList; let i = index" [routerLink]="['/admin/berita-detail', news._id]">
+          <tr *ngFor="let news of newsList; let i = index">
             <td>{{i+1}}</td>
-            <td>{{news.title}}</td>
+            <td [routerLink]="['/admin/berita-detail', news._id]">{{news.title}}</td>
             <td>{{news.summary}}</td>
             <td>
-              <a class="btn btn-danger">
+              <a class="btn btn-danger" (click)="deleteNews(news._id)">
                 <i class="fa fa-trash"></i>
               </a>
             </td>
