--- a/src/app/pages/admin-page/news/addnews/addnews.component.scss
+++ b/src/app/pages/admin-page/news/addnews/addnews.component.scss
@@ -1,7 +1,12 @@
 .image-preview {
+    margin-bottom: 20px;
     img {
         width: 100%;
-        height: auto;
+        height: 200px;
         object-fit: cover;
     }
+}
+
+label {
+    font-weight: bold;
 }
