--- a/src/app/pages/admin-page/task/task.component.html
+++ b/src/app/pages/admin-page/task/task.component.html
@@ -37,8 +37,8 @@
                   <td>{{i+1}}</td>
                   <td>{{category.category.name}}</td>
                   <td>
-                    <a class="btn btn-danger" (click)="editCategory(category.category.name, category.category._id)">
-                      <i class="fa fa-trash"></i>
+                    <a class="btn btn-success" (click)="editCategory(category.category.name, category.category._id)">
+                      <i class="fa fa-edit"></i>
                     </a>
                   </td>
                 </tr>
