--- a/src/app/pages/admin-page/news/news.component.scss
+++ b/src/app/pages/admin-page/news/news.component.scss
@@ -7,6 +7,10 @@ table {
         td {
             vertical-align: middle;
         }
+
+        .news-none {
+            text-align: center;
+        }
     }
 
     a {
