--- a/src/app/pages/admin-page/task/group-task/group-task.component.html
+++ b/src/app/pages/admin-page/task/group-task/group-task.component.html
@@ -1,16 +1,3 @@
-<!-- Content Header (Page header) -->
-<section class="content-header">
-  <h1>
-  </h1>
-  <ol class="breadcrumb">
-    <li>
-      <a href="#">
-        <i class="fa fa-dashboard"></i> Home</a>
-    </li>
-    <li class="active">Kelompok</li>
-  </ol>
-</section>
-
 <!-- Main content -->
 <section class="content">
 
@@ -19,7 +6,7 @@
 
       <div class="box">
         <div class="box-header">
-          <h5>Kelompok Yang Ada</h5>
+          <h5 *ngIf="categoryTask">{{categoryTask.category.name}}</h5>
         </div>
 
         <div class="box-body">
@@ -33,14 +20,38 @@
 
       <div class="box">
         <div class="box-header">
-          <h5>Tambahkan Kelompok Baru</h5>
+          <h5>Tambahkan Tugas Baru</h5>
         </div>
         <div class="box-body">
           <div class="form-group">
-            <div class="row input-nama">
-              <label for="namaKelompok" class="col-sm-4 control-label">Nama Kelompok</label>
+            <div class="row input-row">
+              <label for="judulTugas" class="col-sm-4 control-label">Judul Tugas</label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" id="namaKelompok" placeholder="Masukkan nama kelompok...">
+                <input type="text" class="form-control" id="judulTugas" placeholder="Masukkan judul tugas...">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row input-row">
+              <label for="deskripsiTugas" class="col-sm-4 control-label">Deskripsi Tugas</label>
+              <div class="col-sm-8">
+                <textarea type="text" rows="2" class="form-control" id="deskripsiTugas" placeholder="Masukkan deskripsi tugas..."></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row input-row">
+              <label for="linkTugas" class="col-sm-4 control-label">Link Tugas Tambahan</label>
+              <div class="col-sm-8">
+                  <input type="text" class="form-control" id="linkTugas" placeholder="Masukkan link tugas...">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row input-row">
+              <label for="fotoTugas" class="col-sm-4 control-label">Gambar Tugas</label>
+              <div class="col-sm-8">
+                  <input type="file" id="fotoTugas" placeholder="Masukkan link tugas...">
               </div>
             </div>
           </div>
