--- a/src/app/pages/admin-page/task/task.component.html
+++ b/src/app/pages/admin-page/task/task.component.html
@@ -60,7 +60,7 @@
           </div>
           <div class="box-body">
             <div class="form-group">
-              <div class="row input-nama">
+              <div class="row input-row">
                 <label for="namaKelompok" class="col-sm-4 control-label">Nama Kelompok</label>
                 <div class="col-sm-8">
                   <input type="text" class="form-control" id="namaKelompok" [(ngModel)]="nameInput.name" placeholder="Masukkan nama kelompok...">
