--- a/src/app/pages/admin-page/store/store.component.html
+++ b/src/app/pages/admin-page/store/store.component.html
@@ -1,3 +1,103 @@
-<p>
-  store works!
-</p>
+<!-- Content Header (Page header) -->
+<section class="content-header">
+  <h1>
+    Tambah Barang Toko
+  </h1>
+</section>
+
+<!-- Main content -->
+<section class="content">
+
+  <div class="row">
+    <div class="col-md-7">
+
+      <div class="box">
+        <div class="box-header">
+          <h5>Barang yang Tersedia</h5>
+        </div>
+
+        <div class="box-body table-responsive no-padding">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Nama Barang</th>
+                <th>Harga</th>
+                <th>Deskripsi</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let good of goods; let i = index">
+                <td>{{i+1}}</td>
+                <td>{{good.title}}</td>
+                <td>Rp. {{good.price}}</td>
+                <td>{{good.desc}}</td>                
+                <td>
+                  <a class="btn btn-danger" (click)="deleteGoods(good._id)">
+                    <i class="fa fa-trash"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr *ngIf="!goods">
+                <td>Tidak ada barang yang dapat ditampilkan saat ini.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+       
+    </div>
+
+    <div class="col-md-5">
+
+      <div class="box">
+        <form #goodsForm="ngForm" (ngSubmit)="addGoods(goodsForm)">
+          <div class="box-header">
+            <h5>Tambahkan Barang Baru</h5>
+          </div>
+          <div class="box-body">
+            <div class="form-group">
+              <div class="row input-row">
+                <label for="namaBarang" class="col-sm-4 control-label">Nama Barang</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" id="namaKelompok" name="title" placeholder="Masukkan nama barang..." ngModel required>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="row input-row">
+                <label for="hargaBarang" class="col-sm-4 control-label">Harga Barang (Rp.)</label>
+                <div class="col-sm-8">
+                  <input type="number" class="form-control" id="namaKelompok" name="price" placeholder="Masukkan harga barang..." ngModel required>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="row input-row">
+                <label for="deskripsiBarang" class="col-sm-4 control-label">Deskripsi</label>
+                <div class="col-sm-8">
+                  <textarea type="text" class="form-control" id="deskripsiBarang" name="desc" placeholder="Masukkan deskripsi barang..." ngModel required></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="row input-row">
+                <label for="deskripsiBarang" class="col-sm-4 control-label">Gambar Barang</label>
+                <div class="col-sm-8">
+                  <input (change)="detectImage($event)" type="file" id="goodsImage" name="image" accept="image/jpg, image/jpeg">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="box-footer">
+            <button class="btn btn-success pull-right">Tambah Barang</button>
+          </div>
+        </form>
+      </div>
+        
+    </div>
+  </div>
+
+</section>
+<!-- /.content -->
