--- a/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
+++ b/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
@@ -16,64 +16,118 @@
 <section class="content">
 
   <div class="box box-default">
-    <form #formBerita="ngForm" (ngSubmit)="addBerita(formBerita)" class="form">
-      <div class="box-header with-border">
-        <div class="row">
+    <div class="box-header with-border">
+      <!-- <div class="row"> -->
 
-          <div class="col-md-6">
-            <h5>{{newsDetail.title}}</h5>
-          </div>
+        <!-- <div class="col-md-6"> -->
+          <h3 class="box-title" *ngIf="newsDetail != null">{{newsDetail.title}}</h3>
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+            </button>
+          </div>   
+        <!-- </div> -->
 
-          <div class="col-md-6">
-            <div class="input-group input-group-sm pull-right" style="width: 150px;">
-              <div class="input-group-btn">
-                <button type="submit" class="btn btn-success" routerLink="/admin/tambah-berita" routerLinkActive="active">
-                  <i class="fa fa-edit"></i>
-                  Edit Berita
-                </button>
-              </div>
-            </div>
-          </div>
+        <!-- <div class="col-md-6"> -->
+          <!-- <div class="input-group input-group-sm pull-right" style="width: 150px;"> -->
+            <!-- <div class="input-group-btn">
+              <button type="submit" class="btn btn-success" routerLink="/admin/tambah-berita" routerLinkActive="active">
+                <i class="fa fa-edit"></i>
+                Edit Berita
+              </button>
+            </div> -->
+          <!-- </div> -->
+        <!-- </div> -->
 
-        </div>
-        
-      </div>
+      <!-- </div> -->
+      
+    </div>
     <!-- /.box-header -->
-      <div class="box-body">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="image-preview">
-                <img 
-                  [src]="newsImageCoverUrl || 'https://www.heavydutydirect.ca/wp-content/uploads/2019/02/camera-placeholder-500x382.jpg'" 
-                  alt="your image"
-                />
-              </div>
+    <div *ngIf="newsDetail != null" class="box-body">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="image-preview">
+              <img 
+                [src]="newsImageCoverUrl || 'https://www.heavydutydirect.ca/wp-content/uploads/2019/02/camera-placeholder-500x382.jpg'" 
+                alt="your image"
+              />
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="highlightBerita">Highlight Berita</label>
-                <p id='highlightBerita'>{{newsDetail.summary}}</p>
-              </div>
-              <div class="form-group">
-                <label for="captionBerita">Caption Berita</label>
-                <p id="captionBerita">{{newsDetail.summary}}</p>
-              </div>
-              <div class="form-group">
-                <label for="tanggalBerita">Tanggal Pembuatan</label>
-                <p id="tanggalBerita">{{newsDetail.date | date:'medium'}}</p>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="highlightBerita">Highlight Berita</label>
+              <p id='highlightBerita'>{{newsDetail.summary}}</p>
+            </div>
+            <div class="form-group">
+              <label for="captionBerita">Caption Berita</label>
+              <p id="captionBerita">{{newsDetail.snippet}}</p>
+            </div>
+            <div class="form-group">
+              <label for="tanggalBerita">Tanggal Pembuatan</label>
+              <p id="tanggalBerita">{{newsDetail.date | date:'medium'}}</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p id="newsBody">{{newsDetail.body1}}</p>
+            <p id="newsBody">{{newsDetail.body2}}</p>
+            <p id="newsBody">{{newsDetail.body3}}</p>            
+          </div>
+        </div>    
+      <!-- /.row -->
+    </div>
+    <!-- /.box-body -->
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-6">
+      <div class="box box-default">
+        <div class="box-header with-border">    
+          <h3 class="box-title">Tambahkan foto tubuh berita</h3>
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+            </button>
+          </div>       
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+          <div class="form-group">
+            <div class="row input-row">
+              <label for="fotoTugas" class="col-sm-4 control-label">Foto Tubuh Berita</label>
+              <div class="col-sm-8">
+                  <input (change)="detectBodyImage($event)" type="file" id="fotoTugas" name="bodyImg" accept="image/jpg, image/jpeg" ngModel required>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <p id="newsBody">{{newsDetail.body}}</p>
-            </div>
-          </div>    
-        <!-- /.row -->
+        </div>
+        <!-- /.box-body -->
       </div>
-    <!-- /.box-body -->
-    </form>
+    </div>
 
+    <div class="col-md-6">
+      <div class="box box-default">
+        <div class="box-header with-border">    
+          <h3 class="box-title">Tambahkan foto lain berita</h3>
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+            </button>
+          </div>            
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+          <div class="form-group">
+            <div class="row input-row">
+              <label for="fotoLain" class="col-sm-4 control-label">Foto Lain Berita</label>
+              <div class="col-sm-8">
+                  <input (change)="detectOtherImage($event)" type="file" id="fotoLain" name="otherImg" accept="image/jpg, image/jpeg" ngModel required>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.box-body -->
+      </div>
+    </div>
   </div>
 
 </section>
