--- a/src/app/pages/admin-page/news/newsdetail/newsdetail.component.scss
+++ b/src/app/pages/admin-page/news/newsdetail/newsdetail.component.scss
@@ -1,8 +1,19 @@
-.image-preview {
+.image-cover {
     img {
         width: 100%;
-        height: auto;
         object-fit: cover;
+    }
+}
+
+.image-300 {
+    img {
+        max-height: 300px;
+    }
+}
+
+.image-300 {
+    img {
+        max-height: 200px;
     }
 }
 
@@ -12,6 +23,11 @@
 
 #newsBody {
     text-align: justify;
+
+    p {
+        margin-top: 10px;
+        margin-bottom: 10px;        
+    }
 }
 
 button {
