--- a/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
+++ b/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
@@ -102,8 +102,8 @@
 
   <div class="row">
 
-    <div class="col-md-6">
-      <div class="box box-default">
+    <div *ngIf="!newsDetail.imageBody" class="col-md-6">
+      <div  class="box box-default">
         <div class="box-header with-border">    
           <h3 class="box-title">Tambahkan foto tubuh berita</h3>
           <div class="box-tools pull-right">
@@ -123,10 +123,13 @@
           </div>
         </div>
         <!-- /.box-body -->
+        <div class="box-footer">
+          <button type="submit" (click)="addBodyImage()" class="btn btn-success pull-right">Tambahkan</button>
+        </div>
       </div>
     </div>
 
-    <div class="col-md-6">
+    <div *ngIf="!newsDetail.otherImages" class="col-md-6">
       <div class="box box-default">
         <div class="box-header with-border">    
           <h3 class="box-title">Tambahkan foto lain berita</h3>
@@ -147,6 +150,9 @@
           </div>
         </div>
         <!-- /.box-body -->
+        <div class="box-footer">
+          <button type="submit" class="btn btn-success pull-right">Tambahkan</button>
+        </div>
       </div>
     </div>
   </div>
