--- a/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
+++ b/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
@@ -140,18 +140,26 @@
         </div>
         <!-- /.box-header -->
         <div class="box-body">
+            <div class="form-group">
+              <div class="row input-row">
+                <label for="deskripsi" class="col-sm-4 control-label">Foto Lain Berita</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" id="deskripsi" placeholder="Masukkan deskripsi gambar..." [ngModel]="description" required>
+                </div>
+              </div>
+            </div>
           <div class="form-group">
             <div class="row input-row">
               <label for="fotoLain" class="col-sm-4 control-label">Foto Lain Berita</label>
               <div class="col-sm-8">
-                  <input (change)="detectOtherImage($event)" multiple type="file" id="fotoLain" name="otherImg" accept="image/jpg, image/jpeg" ngModel required>
+                  <input (change)="detectOtherImages($event)" multiple type="file" id="fotoLain" name="otherImg" accept="image/jpg, image/jpeg" ngModel required>
               </div>
             </div>
           </div>
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-          <button type="submit" class="btn btn-success pull-right">Tambahkan</button>
+          <button (click)="addOtherImage()" type="submit" class="btn btn-success pull-right">Tambahkan</button>
         </div>
       </div>
     </div>
